# hoopland-v2

./: .env.example  .gitignore  AGENTS.md  NBA_2003_League.txt  README.md  analyze_grid.py  debug_draft_cols.py  debug_grid_accessory.py  hoopland_assets.json  pyproject.toml  requirements.txt  test_appearance.py  tool_analyze_sprites.py  verify_generator.py
data/: 1982 Draft Class.txt  nba0203.txt
data/mappings/: appearance-mapping.json
docs/: spec.md
docs/static/: appearance-mapping.md  architecture.md  design.md  testing.md
output/2003/: NBA_2003_Draft_Class.txt  NBA_2003_League.txt
output/2004/: NBA_2004_League.txt  TEST_League.txt
output/2016/: NBA_2016_League.txt
output/2023/: NBA_2023_League.txt
output/2024/: NBA_2024_League.txt  NCAA_2024_Tournament_League.txt
scripts/: analyze_grid.py  debug_grid_accessory.py  generate_tendencies.py  tool_analyze_sprites.py
src/hoopland/: __main__.py  cli.py  db.py  logger.py  workflows.py
src/hoopland/blocks/: formatter.py  generator.py
src/hoopland/cv/: appearance.py  asset_indexer.py  face_landmarks.py  mapping_loader.py
tests/: conftest.py  test_appearance_logic.py  test_generator_quick.py  test_hoopland.py  test_integration.py  test_logging_handler.py  test_mapping_loader.py  test_normalization.py
tests/e2e/: test_cli.py
tests/integration/: test_appearance_evolution.py  test_generation.py  test_nba_data.py  test_ncaa_and_editor.py  test_repository.py
tests/unit/: test_appearance.py  test_db.py  test_hoopland.py  test_logger.py  test_normalization.py  test_repository.py  test_structs.py
(+16 files in other folders)
