[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoopland-v2"
version = "0.1.0"
description = "Hoopland V2 Generator"
requires-python = ">=3.10"
dependencies = [
    "nba_api",
    "sqlalchemy",
    "requests",
    "opencv-python-headless",
    "numpy",
    "textual",
    "python-dotenv",
    "mediapipe",
]

[project.scripts]
hoopgen = "hoopland.tui.app:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]
